--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/viki4545/terminal#readme",
   "dependencies": {
+    "child_process": "^1.0.2",
     "readline": "^1.3.0"
   }
 }
